--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5,7 +5,7 @@ body {
     color: #fff;
     overflow-x: hidden;
     background: linear-gradient(120deg, #2f2f2feb, #dcdcdca3);
-    background-image: url(/static/images/Levi\(1\).png);
+    background-image: url(/static/images/8376cdbf-e448-433f-a0be-c5f73aa41e1b.__CR0\,0\,600\,450_PT0_SX600_V1___.jpg);
     /*background-size: cover;*/
     background-repeat: no-repeat;
     background-size: cover;
@@ -113,7 +113,7 @@ body {
     justify-content: space-between;
     /* Space between the sections */
     padding: 1rem;
-    background-color: rgba(135, 63, 125, 0.513);
+    /*background-color: rgba(135, 63, 125, 0.513);
     /* Background color for header */
 }
 
@@ -189,7 +189,7 @@ body {
 /* Content container */
 
 #home h3 {
-    color: #47e2d7;
+    color: #d29430af;
 }
 
 #about {
@@ -241,12 +241,12 @@ body {
 .greeting-container {
     text-align: center;
     padding: 20px;
-    background-color: #0738302a;
+    background-color: #252b2adc;
     color: #277984;
     border-radius: 50px;
     margin: 20px auto;
     /*box-shadow: 0 0 10px #00e5ff;*/
-    max-width: 600px;
+    max-width: 550px;
     animation: fadeIn 2s ease-in-out;
 }
 
@@ -261,6 +261,26 @@ body {
     font-size: 18px;
     margin: 0;
     justify-items: center;
+}
+
+.animated-text {
+    display: inline-block;
+    overflow: hidden;
+    width: 0;
+    /* Start as a dot */
+    white-space: nowrap;
+    animation: revealText 3s forwards;
+}
+
+@keyframes revealText {
+    0% {
+        width: 0;
+        /* Dot */
+    }
+    100% {
+        width: 100%;
+        /* Full text revealed */
+    }
 }
 
 
@@ -489,16 +509,16 @@ body {
 
 @keyframes animate {
     20% {
-        background-image: url(/static/images/ADIDAS.png);
+        background-image: url(/static/images/ad.jpg);
     }
     40% {
         background-image: url(/static/images/Nike.png);
     }
     60% {
-        background-image: url(/static/images/Aesthetic\ New\ Arrival\ Woman\ Jacket\ Instagram\ Post.png);
+        background-image: url(/static/images/van.jpg);
     }
     80% {
-        background-image: url(/static/images/Levi\(1\).png);
+        background-image: url(/static/images/8376cdbf-e448-433f-a0be-c5f73aa41e1b.__CR0\,0\,600\,450_PT0_SX600_V1___.jpg);
     }
 }
 
@@ -510,4 +530,528 @@ body {
     -webkit-background-clip: text;
     color: transparent;
     animation: gradientMove 5s infinite alternate;
+}
+
+
+/* Hide the default file input */
+
+.file-upload-input {
+    display: none;
+}
+
+
+/* Style the paperclip icon */
+
+.file-upload-label {
+    cursor: pointer;
+    color: #007bff;
+    /* Set the color of the icon */
+    font-size: 1.5em;
+    /* Adjust icon size */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0.5em;
+}
+
+.file-upload-label:hover {
+    color: #0056b3;
+    /* Hover color */
+}
+
+.chat-container {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    max-width: 1000px;
+    height: 80vh;
+    margin: auto;
+    /* border: 1px solid #ddd;
+    border-radius: 8px; */
+    overflow: hidden;
+}
+
+
+/* Chat history section styling */
+
+.chat-history {
+    flex: 1;
+    padding: 1em;
+    overflow-y: auto;
+    /* background-color: #f9f9f9; */
+    display: flex;
+    flex-direction: column;
+}
+
+.message {
+    margin-bottom: 1em;
+    padding: 0.5em 1em;
+    border-radius: 10px;
+    max-width: 100%;
+}
+
+.message.user {
+    align-self: flex-end;
+    background-color: #007bff;
+    /* color: white; */
+}
+
+.message.bot {
+    align-self: flex-start;
+    /* background-color: #e1e1e1; */
+    color: black;
+}
+
+
+/* Chat input section styling */
+
+.chat-input-container {
+    display: flex;
+    padding: 1em;
+    border-top: 1px solid #d32424;
+    align-items: center;
+    gap: 0.5em;
+}
+
+
+/* File upload icon styling */
+
+.file-upload-label {
+    cursor: pointer;
+    color: #007bff;
+    font-size: 1.5em;
+}
+
+.file-upload-input {
+    display: none;
+}
+
+
+/* Text input styling */
+
+#user-input {
+    flex: 1;
+    padding: 0.5em;
+    border-radius: 4px;
+    width: 200px;
+    border: 1px solid #ccc;
+}
+
+button {
+    padding: 0.5em 1em;
+    background-color: #2a2d30;
+    color: rgb(219, 164, 164);
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: #11151887;
+}
+
+#chat-sidebar {
+    width: 250px;
+    background-color: #06232b59;
+    position: fixed;
+    left: 0;
+    top: 0;
+    height: 100%;
+    overflow-y: auto;
+    padding-top: 20px;
+}
+
+#chat-list button {
+    width: 100%;
+    background: none;
+    border: none;
+    padding: 10px;
+    text-align: left;
+}
+
+#chat-list button:hover {
+    background-color: #d8ab43;
+}
+
+#contactForm {
+    background-color: #ac6d6d90;
+    padding: 30px;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    max-width: 350px;
+    width: 80%;
+    justify-content: center;
+    align-items: center;
+}
+
+#registerForm {
+    background-color: #ac6d6d90;
+    padding: 30px;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    max-width: 350px;
+    width: 80%;
+    justify-content: center;
+    align-items: center;
+}
+
+.contact-form h2 {
+    text-align: center;
+    color: #333;
+    margin-bottom: 20px;
+}
+
+
+/* Form group styling */
+
+.form-group {
+    margin-bottom: 15px;
+}
+
+
+/* Input and textarea styling */
+
+.contact-form input[type="text"],
+.contact-form input[type="email"],
+.contact-form input[type="file"],
+.contact-form textarea {
+    width: 100%;
+    padding: 10px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
+
+/* File input label styling */
+
+.contact-form label {
+    display: block;
+    margin-bottom: 5px;
+    font-weight: bold;
+    color: #333;
+}
+
+
+/* Submit button styling */
+
+.contact-form .cta-button {
+    width: 100%;
+    padding: 12px;
+    background-color: #28a745;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    font-size: 18px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+.contact-form .cta-button:hover {
+    background-color: #218838;
+}
+
+.social-links a {
+    display: inline-block;
+    margin: 5px;
+    justify-content: center;
+    align-items: center;
+    color: #fff;
+}
+
+.social-links i {
+    font-size: 40px;
+    /* Adjust the size as needed */
+    justify-content: center;
+    align-items: center;
+    width: auto;
+    height: auto;
+}
+
+
+/* slider form */
+
+.contact-slider {
+    position: relative;
+    overflow: hidden;
+    width: 100%;
+}
+
+.slides {
+    display: flex;
+    transition: transform 0.5s ease-in-out;
+}
+
+.slide {
+    min-width: 100%;
+    box-sizing: border-box;
+}
+
+.slider-buttons {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 80%;
+    display: flex;
+    justify-content: space-between;
+}
+
+
+/* new css */
+
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 20px;
+}
+
+.blueBg {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    margin-bottom: 20px;
+}
+
+.box {
+    text-align: center;
+}
+
+.formBox {
+    width: 100%;
+    max-width: 800px;
+}
+
+.form {
+    display: none;
+    /* Hide all forms initially */
+}
+
+.form form,
+.form iframe {
+    width: 100%;
+}
+
+
+/* .form input,
+.form textarea {
+    width: 100%;
+    margin-bottom: 10px;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+
+.form input[type="submit"] {
+    background-color: #03a9f4;
+    color: white;
+    border: none;
+    cursor: pointer;
+}
+
+.form h3 {
+    margin-bottom: 15px;
+} */
+
+#registerForm {
+    border: none;
+}
+
+.container table {
+    width: 100%;
+    max-width: 800px;
+    margin: auto;
+}
+
+.container td {
+    width: 50%;
+    /* Ensures equal width for both columns */
+    vertical-align: top;
+    /* Aligns the content to the top */
+    height: 50%;
+}
+
+.container button {
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+.form h3 {
+    margin-bottom: 15px;
+}
+
+.form input,
+.form textarea {
+    width: 100%;
+    margin-bottom: 10px;
+    padding: 10px;
+    border-radius: 5px;
+    background-color: white;
+}
+
+.form input[type="submit"] {
+    background-color: green;
+    color: white;
+    border: none;
+    cursor: pointer;
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-btn {
+    padding: 10px 20px;
+    border: none;
+    cursor: pointer;
+    background-color: #8c6121;
+    color: white;
+    border-radius: 5px;
+}
+
+.popup-content {
+    display: none;
+    position: absolute;
+    background-color: rgba(207, 128, 128, 0.558);
+    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
+    padding: 20px;
+    border-radius: 8px;
+    z-index: 1;
+    width: 250px;
+}
+
+.popup-content label {
+    display: block;
+    margin-top: 10px;
+}
+
+.popup-content select {
+    width: 100%;
+    padding: 5px;
+    margin-bottom: 10px;
+}
+
+.close-btn {
+    margin-top: 10px;
+    padding: 5px 10px;
+    background-color: #007BFF;
+    color: white;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+
+/*popup*/
+
+.popup {
+    display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: white;
+    border: 2px solid #000;
+    padding: 20px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+.popup.active {
+    display: block;
+}
+
+
+/* body {
+    font-family: Arial, sans-serif;
+    background-color: #f4f4f4;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
+  }
+   */
+
+
+/*  3 dots */
+
+.three-dots-menu {
+    position: relative;
+    display: inline-block;
+}
+
+.menu-button {
+    background: none;
+    border: none;
+    cursor: pointer;
+    font-size: 1.5rem;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    left: 0;
+    background-color: rgba(255, 255, 255, 0.344);
+    border: 1px solid #ccc;
+    z-index: 10;
+    width: 300px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    padding: 10px;
+    border-radius: 5px;
+}
+
+.dropdown-content .container {
+    margin: 0;
+}
+
+.dropdown-content.show {
+    display: block;
+    opacity: 1;
+    transform: scale(1);
+    animation: bounceIn 0.5s ease-out;
+}
+
+#brand {
+    padding: 5px;
+    border-radius: 5px;
+    right: 0;
+    display: flex;
+}
+
+#color {
+    padding: 5px;
+    border-radius: 5px;
+    right: 0;
+    display: flex;
+}
+
+#size {
+    padding: 5px;
+    border-radius: 5px;
+    right: 0;
+    display: flex;
+}
+
+.dropdown-content button {
+    padding: 5px;
+    border-radius: 5px;
+    margin-top: 10px;
+}
+
+
+/* Bouncy effect animation */
+
+@keyframes bounceIn {
+    0% {
+        transform: scale(0.8);
+    }
+    50% {
+        transform: scale(1.1);
+    }
+    100% {
+        transform: scale(1);
+    }
 }
